--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
-    "i18next": "^23.13.0",
+    "i18next": "^23.15.2",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "monaco-editor": "^0.50.0",
     "plotly.js": "^2.34.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
-    "react-i18next": "^15.0.1",
+    "react-i18next": "^15.0.2",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-plotly.js": "^2.6.0",
