--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "monaco-editor": "^0.50.0",
     "plotly.js": "^2.34.0",
     "react": "^18.3.1",
+    "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
+    "react-google-charts": "^5.1.0",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
@@ -29,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-sidebar": "^3.0.2",
     "react-spinners": "^0.14.1",
+    "react-spring": "^9.7.4",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
     "rehype-raw": "^7.0.0",
